--- a/.github/workflows/pr-review.yaml
+++ b/.github/workflows/pr-review.yaml
@@ -28,7 +28,7 @@ jobs:
         # Construct the JSON payload with jq to avoid formatting issues
         JSON_PAYLOAD=$(jq -n --arg prompt "Review the following code for any issues or improvements: $DIFF_CONTENT" \
           '{
-            "model": "gpt-3.5-turbo",
+            "model": "gpt-4o",
             "prompt": $prompt,
             "max_tokens": 500
           }')
