--- a/.github/workflows/pr-review.yaml
+++ b/.github/workflows/pr-review.yaml
@@ -27,9 +27,9 @@ jobs:
           echo "GITHUB_REF: $GITHUB_REF"
           echo "PR_NUMBER: $PR_NUMBER"
       
-      - name: Run ChatGPT Code Review
+      - name: Run ClaudeAI Code Review
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
-        run: python .github/workflows/chatgpt_review.py
+        run: python .github/workflows/claude_review.py
