--- a/etl/docker-compose.yml
+++ b/etl/docker-compose.yml
@@ -9,7 +9,6 @@ services:
     restart: unless-stopped
     depends_on:
       - tfrs
-      - lcfs
     volumes:
       - ./jdbc_drivers/postgresql-42.7.3.jar:/opt/nifi/nifi-current/lib/postgresql-42.7.3.jar
       - ./nifi_output:/nifi-output
@@ -19,34 +18,16 @@ services:
     image: postgres:14.2
     container_name: tfrs
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: pass
+      POSTGRES_USER: tfrs
+      POSTGRES_PASSWORD: development_only
       POSTGRES_DB: tfrs
     ports:
-      - "5435:5435"
+      - "5435:5432"
     volumes:
       - tfrs_data:/var/lib/postgresql/data
     restart: unless-stopped
-    command: >
-      postgres -c listen_addresses='*' -c port=5435
-
-  lcfs:
-    image: postgres:14.2
-    container_name: lcfs
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: pass
-      POSTGRES_DB: lcfs
-    ports:
-      - "5436:5436"
-    volumes:
-      - lcfs_data:/var/lib/postgresql/data
-    restart: unless-stopped
-    command: >
-      postgres -c listen_addresses='*' -c port=5436
 
 volumes:
   tfrs_data:
-  lcfs_data:
   nifi_output:
   nifi_scripts:
