--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,13 +14,13 @@ readme = "README.md"
 python = "^3.9"
 fastapi = "^0.111.0"
 uvicorn = { version = "^0.24.0", extras = ["standard"] }
-pydantic = {extras = ["email"], version = "^2.4.2"}
+pydantic = { extras = ["email"], version = "^2.4.2" }
 yarl = "^1.8.2"
 ujson = "^5.7.0"
-SQLAlchemy = {version = "^2.0.0", extras = ["asyncio"]}
+SQLAlchemy = { version = "^2.0.0", extras = ["asyncio"] }
 alembic = "^1.12.1"
-asyncpg = {version = "^0.27.0", extras = ["sa"]}
-redis = {version = "^4.4.2", extras = ["hiredis"]}
+asyncpg = { version = "^0.27.0", extras = ["sa"] }
+redis = { version = "^4.4.2", extras = ["hiredis"] }
 httptools = "^0.5.0"
 prometheus-fastapi-instrumentator = "6.0.0"
 colorlog = "6.7.0"
@@ -29,7 +29,6 @@ pydantic-settings = "^2.0.3"
 pyjwt = "^2.8.0"
 debugpy = "^1.8.0"
 cryptography = "^43.0.1"
-faker = "^21.0.0"
 fastapi-cache2 = "^0.2.1"
 httpx = "^0.23.3"
 pandas = "^2.1.4"
@@ -41,8 +40,10 @@ lupa = "^2.0"
 alembic-postgresql-enum = "^1.1.2"
 bump-pydantic = "^0.8.0"
 black = "^24.4.2"
+boto3 = "^1.35.26"
 
 [tool.poetry.dev-dependencies]
+faker = "^21.0.0"
 pytest = "^7.2.1"
 flake8 = "~4.0.1"
 mypy = "^1.1.1"
@@ -59,7 +60,7 @@ fakeredis = "^2.5.0"
 [tool.isort]
 profile = "black"
 multi_line_output = 3
-src_paths = ["lcfs",]
+src_paths = ["lcfs", ]
 
 [tool.mypy]
 strict = true
