--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "chroma-js": "^2.4.2",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
+    "esbuild": "^0.24.0",
     "i18next": "^23.8.2",
     "keycloak-js": "^23.0.3",
     "lodash": "^4.17.21",
@@ -62,6 +63,7 @@
     "moment": "^2.30.1",
     "mui-daterange-picker-plus": "^1.0.4",
     "papaparse": "^5.4.1",
+    "pretty-bytes": "^6.1.1",
     "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
