--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -41,10 +41,11 @@ alembic-postgresql-enum = "^1.1.2"
 bump-pydantic = "^0.8.0"
 black = "^24.4.2"
 boto3 = "^1.35.26"
+pytest-asyncio = "^0.24.0"
 
 [tool.poetry.dev-dependencies]
 faker = "^21.0.0"
-pytest = "^7.2.1"
+pytest = "^8.3.3"
 flake8 = "~4.0.1"
 mypy = "^1.1.1"
 isort = "^5.11.4"
