--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -56,7 +56,7 @@ jobs:
     if: >
       (github.event.action == 'labeled' && github.event.label.name == 'build' && github.event.pull_request.base.ref == github.event.repository.default_branch) ||
       (github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'build') && github.event.pull_request.base.ref == github.event.repository.default_branch)
-    name: Build LCFS
+    name: Build LCFS Frontend
     runs-on: ubuntu-latest
     needs: [get-version]
     timeout-minutes: 60
@@ -96,7 +96,7 @@ jobs:
     if: >
       (github.event.action == 'labeled' && github.event.label.name == 'build' && github.event.pull_request.base.ref == github.event.repository.default_branch) ||
       (github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'build') && github.event.pull_request.base.ref == github.event.repository.default_branch)
-    name: Build LCFS
+    name: Build LCFS Backend
     runs-on: ubuntu-latest
     needs: [get-version]
     timeout-minutes: 60
