--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -41,6 +41,7 @@ alembic-postgresql-enum = "^1.1.2"
 bump-pydantic = "^0.8.0"
 black = "^24.4.2"
 boto3 = "^1.35.26"
+typing-extensions = "^4.12.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.1"
