--- a/.github/workflows/docker-auto-test.yaml
+++ b/.github/workflows/docker-auto-test.yaml
@@ -67,7 +67,7 @@ jobs:
         cd backend
         poetry config virtualenvs.create false
         poetry install
-        pip install pytest-github-actions-annotate-failures
+        pip install pytest-github-actions-annotate-failures typing_extensions
 
     - name: Install frontend dependencies
       run: |
