--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,7 +12,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-fastapi = "^0.111.0"
+fastapi = "^0.115.4"
 uvicorn = { version = "^0.24.0", extras = ["standard"] }
 pydantic = { extras = ["email"], version = "^2.4.2" }
 yarl = "^1.8.2"
@@ -42,7 +42,7 @@ bump-pydantic = "^0.8.0"
 black = "^24.4.2"
 boto3 = "^1.35.26"
 typing-extensions = "^4.12.2"
-pytest-asyncio = "^0.24.0"
+python-multipart = "^0.0.16"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.3.3"
