--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,7 +23,6 @@ asyncpg = { version = "^0.27.0", extras = ["sa"] }
 redis = { version = "^4.4.2", extras = ["hiredis"] }
 httptools = "^0.5.0"
 prometheus-fastapi-instrumentator = "6.0.0"
-colorlog = "6.7.0"
 distlib = "^0.3.8"
 pydantic-settings = "^2.0.3"
 pyjwt = "^2.8.0"
@@ -42,6 +41,7 @@ bump-pydantic = "^0.8.0"
 black = "^24.4.2"
 boto3 = "^1.35.26"
 typing-extensions = "^4.12.2"
+structlog = "^24.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.1"
