--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --fix --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "prettier": "prettier . --check",
@@ -21,7 +21,8 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --headless --browser chrome",
     "cypress:dev": "cypress run --config baseUrl=https://lcfs-dev.apps.silver.devops.gov.bc.ca/",
-    "cypress:clear": "cypress cache clear"
+    "cypress:clear": "cypress cache clear",
+    "openapi:generate": "openapi-ts"
   },
   "lint-staged": {
     "*.{js,jsx}": [
@@ -42,6 +43,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hey-api/client-axios": "^0.2.9",
     "@hookform/resolvers": "^3.3.3",
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
@@ -85,6 +87,7 @@
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^20.0.4",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
+    "@hey-api/openapi-ts": "^0.54.1",
     "@storybook/addon-a11y": "^8.2.9",
     "@storybook/addon-docs": "^8.2.9",
     "@storybook/addon-essentials": "^8.2.9",
@@ -99,8 +102,10 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.12.2",
+    "@typescript-eslint/parser": "^8.12.2",
     "@vitest/coverage-v8": "^2.1.4",
     "@vitest/ui": "^2.1.4",
     "axe-core": "^4.8.3",
@@ -126,6 +131,7 @@
     "prop-types": "^15.8.1",
     "standard": "^17.1.0",
     "storybook": "^8.2.9",
+    "typescript": "^5.6.3",
     "vitest": "^2.1.4"
   },
   "optionalDependencies": {
