--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -56,6 +56,7 @@ pytest-cov = "^4.0.0"
 anyio = "^3.6.2"
 pytest-env = "^0.8.1"
 fakeredis = "^2.5.0"
+rich = "^13.9.4"
 
 [tool.isort]
 profile = "black"
