feat: Add RabbitMQ for Transactions
* Add BaseConsumer that hold standard connect and consume logic
* Add TransactionConsumer to consume messages from the transaction queue
* Add tests for setting up and tearing down the consumers

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -43,6 +43,7 @@ black = "^24.4.2"
 boto3 = "^1.35.26"
 typing-extensions = "^4.12.2"
 python-multipart = "^0.0.16"
+aio-pika = "^9.4.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.3.3"
