--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -44,6 +44,8 @@ typing-extensions = "^4.12.2"
 structlog = "^24.4.0"
 python-multipart = "^0.0.16"
 aio-pika = "^9.4.3"
+jinja2 = "^3.1.4"
+requests = "^2.32.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.3.3"
