feat: Add sorting and filtering to Fuel Codes
* Hook up filtering and sorting methods
* Setup backend filtering lgic
* Change SetFilter to use custom so it avoids ag-grid filtering
* Don't convert filters to int so we can preserve float values

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -137,7 +137,7 @@ services:
         source: node_modules
         target: /app/node_modules
     networks:
-      - shared_network
+      - shared_network`
 
 volumes:
   postgres_data:
