build backend for Openshift

--- a/openshift/templates/frontend-bc.yaml
+++ b/openshift/templates/frontend-bc.yaml
@@ -58,7 +58,7 @@ objects:
       type: Git
     strategy:
       dockerStrategy:
-        dockerfilePath: ./Dockerfile.openshift
+        target: prod
         env:
           - name: ARTIFACTORY_USER
             valueFrom:
