set virtualenvs.create to false

--- a/backend/Dockerfile.openshift
+++ b/backend/Dockerfile.openshift
@@ -8,8 +8,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends procps \
 RUN pip install poetry==1.6.1
 
 # Configuring poetry
-RUN poetry config virtualenvs.create true
-
+RUN poetry config virtualenvs.create false
 
 # Copying requirements of a project
 COPY pyproject.toml poetry.lock /app/
